@@ -105,7 +105,7 @@ If on, ignores case and punctuation and handles numbers properly: file8, File9, 
 When the pinboard is turned on, you can drag files
 and applications onto it to create short-cuts to them.
 See the manual for information about using the pinboard.</label>
-    <frame label='Text style'>
+    <frame label='Colours'>
       <hbox>
         <colour name='pinboard_fg_colour' label='Foreground:'/>
         <colour name='pinboard_bg_colour' label='Background:'/>
