@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+16-May-2002
+~~~~~~~~~~~
+Pinboard background colour option works again.
+
 15-May-2002
 ~~~~~~~~~~~
 Wrap long icon names onto multiple lines.
